iac/kustomize/base/cluster-setup/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: identity
  labels:
    owner: platform
