iac/kustomize/base/cluster-setup/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-setup
  namespace: identity
spec:
  selector:
    app: cluster-setup
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
